DuPont DevSB/src/objects/Trademark_Abuse_Sample__c.object
<CustomObject>
    <description>This object is used to store the details related to samples obtained for Brand protection cases.</description>
    <fields>
        <fullName>Active_Ingredients_Per_Label__c</fullName>
        <label>Active Ingredients (According to Label)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Ingredients__c</fullName>
        <label>Active Ingredients</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Azimsulfuron (AZM)</fullName>
                </value>
                <value>
                    <fullName>Bensulfuron methyl (BSM)</fullName>
                </value>
                <value>
                    <fullName>Bromacil (BRO)</fullName>
                </value>
                <value>
                    <fullName>Carbendazim (CAR)</fullName>
                </value>
                <value>
                    <fullName>Chlorimuron Ethyl (CLE)</fullName>
                </value>
                <value>
                    <fullName>Chlorsulfuron (CLS)</fullName>
                </value>
                <value>
                    <fullName>Copper (COP)</fullName>
                </value>
                <value>
                    <fullName>Cyazypyr (CYA)</fullName>
                </value>
                <value>
                    <fullName>Cymoxanil (CYM)</fullName>
                </value>
                <value>
                    <fullName>Dicamba (DIC)</fullName>
                </value>
                <value>
                    <fullName>Diruon (DIU)</fullName>
                </value>
                <value>
                    <fullName>Ethametsulfuron methyl (ETH)</fullName>
                </value>
                <value>
                    <fullName>Famoxadone (FAM)</fullName>
                </value>
                <value>
                    <fullName>Flupysulfuron methyl (FLU)</fullName>
                </value>
                <value>
                    <fullName>Flusilazole (FLZ)</fullName>
                </value>
                <value>
                    <fullName>Hexazinone (HEX)</fullName>
                </value>
                <value>
                    <fullName>Indoxacarb (IND)</fullName>
                </value>
                <value>
                    <fullName>Lenacil (LEN)</fullName>
                </value>
                <value>
                    <fullName>Mancozeb (MAN)</fullName>
                </value>
                <value>
                    <fullName>Methomyl (MET)</fullName>
                </value>
                <value>
                    <fullName>Metsulfuron methyl (MSM)</fullName>
                </value>
                <value>
                    <fullName>NIcosulfuron (NIC)</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Oxamyl (OXA)</fullName>
                </value>
                <value>
                    <fullName>Picoxystrobin (PIC)</fullName>
                </value>
                <value>
                    <fullName>Proquinazid (PRO)</fullName>
                </value>
                <value>
                    <fullName>Pyraxalt (PYR)</fullName>
                </value>
                <value>
                    <fullName>Rimsulfuron (RIM)</fullName>
                </value>
                <value>
                    <fullName>Rynaxypyr (RYN)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <description>Manually entered</description>
        <label>Batch Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Trademark_Abuse_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City_Village__c</fullName>
        <label>City/Village</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Text__c</fullName>
        <label>Country Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BORNEO</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crop_Phase_Status__c</fullName>
        <formula>Case__r.DSO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Crop Phase/Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Role__c</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brand Protection Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Samples/Trap Purchases (Dealer)</relationshipLabel>
        <relationshipName>Trademark_Abuse_Samples</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <label>Dealer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_province__c</fullName>
        <label>District/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Sample_Coll1ector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Sample 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Role__c</field>
                <operation>equals</operation>
                <value>External Sample Collector</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brand Protection Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Samples/Trap Purchases (External Sample Collector)</relationshipLabel>
        <relationshipName>Trademark_Abuse_Samples1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Sample_Collector__c</fullName>
        <label>External Sample Collector</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Active__c</fullName>
        <label>First Active</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formulation_Abbr__c</fullName>
        <label>Formulation (Abbr)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BR</fullName>
                </value>
                <value>
                    <fullName>BRG</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>DF</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>EW</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>OD</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Powder</fullName>
                </value>
                <value>
                    <fullName>SC</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>SL</fullName>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>SR</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
                <value>
                    <fullName>SX</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>WB</fullName>
                </value>
                <value>
                    <fullName>WDG</fullName>
                </value>
                <value>
                    <fullName>WG</fullName>
                </value>
                <value>
                    <fullName>WP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Formulation__c</fullName>
        <label>Formulation (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Identification_Date__c</fullName>
        <description>Date of Identification</description>
        <label>Identification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Sample_1Collector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Sample Collect1or</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Role__c</field>
                <operation>equals</operation>
                <value>Internal Sample Collector</value>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brand Protection Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Samples/Trap Purchases (Internal Sample Collector)</relationshipLabel>
        <relationshipName>Trademark_Abuse_Samples2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Sample_Collector2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Sample Collector</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Samples_Trap_Purchases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Sample_Collector__c</fullName>
        <label>Internal Sam1ple Collector</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Manufacturer_Country__c</fullName>
        <label>Label Manufacturer Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALAND ISLANDS</fullName>
                </value>
                <value>
                    <fullName>ALBANIA</fullName>
                </value>
                <value>
                    <fullName>ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AMERICAN SAMOA</fullName>
                </value>
                <value>
                    <fullName>ANDORRA</fullName>
                </value>
                <value>
                    <fullName>ANGOLA</fullName>
                </value>
                <value>
                    <fullName>ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BELARUS</fullName>
                </value>
                <value>
                    <fullName>BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BELIZE</fullName>
                </value>
                <value>
                    <fullName>BENIN</fullName>
                </value>
                <value>
                    <fullName>BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BORNEO</fullName>
                </value>
                <value>
                    <fullName>BOSNIA AND HERZEGOVINA</fullName>
                </value>
                <value>
                    <fullName>BOTSWANA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Label_Manufacturer__c</fullName>
        <label>Label Manufacturer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Label_Name__c</fullName>
        <label>Label Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Field__c</fullName>
        <label>Legacy Field</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Sample_Name__c</fullName>
        <label>Legacy Sample Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Quality_Aspects__c</fullName>
        <label>Package Quality Aspects</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <label>Package Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Glass Bottle</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Plastic bag</fullName>
                </value>
                <value>
                    <fullName>Plastic Bottle</fullName>
                </value>
                <value>
                    <fullName>Plastic box</fullName>
                </value>
                <value>
                    <fullName>Sachet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_Per_Unit_Currency__c</fullName>
        <label>Price Per Unit Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>BRL</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>CLP</fullName>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>COP</fullName>
                </value>
                <value>
                    <fullName>CZK</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>IDR</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>KRW</fullName>
                </value>
                <value>
                    <fullName>KZT</fullName>
                </value>
                <value>
                    <fullName>MMK</fullName>
                </value>
                <value>
                    <fullName>MXN</fullName>
                </value>
                <value>
                    <fullName>MYR</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>PKR</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>RON</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
                <value>
                    <fullName>SAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_per_Unit_Actual__c</fullName>
        <label>Price per Unit (Actual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_Unit_USD__c</fullName>
        <label>Price per Unit (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Collection_Method__c</fullName>
        <label>Product Collection Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Seized</fullName>
                </value>
                <value>
                    <fullName>Exchanged</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Pack_Size_Unit__c</fullName>
        <label>Product Pack Size Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>g</fullName>
                </value>
                <value>
                    <fullName>kgs</fullName>
                </value>
                <value>
                    <fullName>lbs</fullName>
                </value>
                <value>
                    <fullName>ltrs</fullName>
                </value>
                <value>
                    <fullName>ml</fullName>
                </value>
                <value>
                    <fullName>ozs</fullName>
                </value>
                <value>
                    <fullName>Packs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Pack_Size__c</fullName>
        <description>This is a number field.  Should be integer</description>
        <label>Product Pack Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Quality_Aspects__c</fullName>
        <label>Product Quality Aspects</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Quantity_Collected_Unit__c</fullName>
        <label>Product Quantity Collected Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>g</fullName>
                </value>
                <value>
                    <fullName>kgs</fullName>
                </value>
                <value>
                    <fullName>lbs</fullName>
                </value>
                <value>
                    <fullName>ltrs</fullName>
                </value>
                <value>
                    <fullName>ml</fullName>
                </value>
                <value>
                    <fullName>ozs</fullName>
                </value>
                <value>
                    <fullName>Packs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Quantity_Collected__c</fullName>
        <description>This is a number field.  Should be integer</description>
        <label>Product Quantity Collected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF(CONTAINS(&quot;UNITED STATES:CANADA&quot;,Country_Text__c),&quot;NA&quot;, 
IF(CONTAINS(&quot;INDIA:CHINA:KOREA DPR:CAMBODIA:BHUTAN:BOUVET ISLAND:BRUNEI DARUSSALAM:MONTSERRAT:NAURU:SOLOMON ISLANDS:TIMOR-LESTE:TOKELAU:TONGA:TUVALU:VANUATU:WALLIS AND FUTUNA:INDONESIA:MALAYSIA:KOREA DPR, NORTH:MYANMAR:PHILIPPINES:THAILAND:VIETNAM:JAPAN:KOREA, SOUTH:AUSTRALIA:MAURITIUS:NEW ZEALAND:TAIWAN&quot;, Country_Text__c), &quot;APAC&quot;, 
IF(CONTAINS(&quot;BRAZIL:ARGENTINA:CHILEGUATEMALA:PARAGUAY:PERU:ANGUILLA:MEXICO:BOLIVIA:COLOMBIA:URUGUAY:NAVASSA ISLAND:SAINT HELENA:SAINT KITTS AND NEVIS:SAINT VINCENT AND THE GRENADINES:SURINAME:TRINIDAD AND TOBAGO:COSTA RICA:DOMINICAN REPUBLIC&quot;, Country_Text__c), &quot;LA&quot;, 
IF(CONTAINS(&quot;LIBYAN ARAB JAMAHIRIYA:ALGERIA:DJIBOUTI:ETHIOPIA&quot;,Country_Text__c),&quot;Northern Africa&quot;, 
IF(CONTAINS(&quot;SOUTH AFRICA:TANZANIA, UNITED REPUBLIC OF:ZAMBIA:BURUNDI:COMOROS:LESOTHO:MADAGASCAR:MALAWI:MAURITIUS:SAO TOME AND PRINCIPE:SEYCHELLES:ZIMBABWE:KENYA&quot;,Country_Text__c),&quot;Southern Africa&quot;, 
IF(CONTAINS(&quot;CAMEROON:BENIN:BURKINA FASO:CAPE VERDE:CÔTE D&apos;IVOIRE:LIBERIA:SIERRA LEONE:TOGO:GAMBIA:SENEGAL&quot;,Country_Text__c),&quot;West Africa&quot;, 
IF(CONTAINS(&quot;BELARUS:BOSNIA AND HERZEGOVINA:BULGARIA:CROATIA:CZECH REPUBLIC:ESTONIA:GEORGIA:GREECE:HUNGARY:KAZAKHSTAN:LATVIA:LITHUANIA:POLAND:PAKISTAN:MOLDOVA:ROMANIA:RUSSIAN FEDERATION:SERBIA:SLOVAKIA:UKRAINE:UZBEKISTAN&quot;,Country_Text__c),&quot;Eastern Europe&quot;, 
IF(CONTAINS(&quot;TURKEY:ISRAEL:IRAQ:SAUDI ARABIA:SYRIA:JORDAN:KUWAIT:QATAR:IRAN:YEMEN:EGYPT:AZERBAIJAN&quot;, Country_Text__c), &quot;Middle East&quot;, 
IF(CONTAINS(&quot;AUSTRIA:BELGIUM:DENMARK:FINLAND:FRANCE:GERMANY:IRELAND:ITALY:NETHERLANDS:ANDORRA:FAROE ISLANDS:LIECHTENSTEIN:LUXEMBOURG:SAN MARINO:SVALBARD AND JAN MAYEN:PORTUGAL:SPAIN:SWEDEN:SWITZERLAND:UNITED KINGDOM OF GREAT BRITAIN AND NORTHERN IRELAND&quot;,Country_Text__c),&quot;Western Europe&quot;,&quot;None&quot;)))))))))</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Archived_Date__c</fullName>
        <label>Sample Archived Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sample_Comments__c</fullName>
        <description>comments for sample 1</description>
        <label>Sample Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sample_Conclusion__c</fullName>
        <description>conclusion for sample 1</description>
        <label>Sample Conclusion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUTHENTIC</fullName>
                </value>
                <value>
                    <fullName>COUNTERFEIT</fullName>
                </value>
                <value>
                    <fullName>UNCLEAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Dispatched_Date__c</fullName>
        <label>Sample Dispatched Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sample_Name__c</fullName>
        <label>Sample Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Packaging_Analysis__c</fullName>
        <label>Sample Packaging Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sample_Reason__c</fullName>
        <label>Sample Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authentic</fullName>
                </value>
                <value>
                    <fullName>BioProduct</fullName>
                </value>
                <value>
                    <fullName>Counterfeit</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>Illegal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Parallel</fullName>
                </value>
                <value>
                    <fullName>Pre-Registration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Technical_Analysis__c</fullName>
        <label>Sample Technical Analysis</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Active__c</fullName>
        <label>Second Active</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Active__c</fullName>
        <label>Third Active</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Product_Price_Actual__c</fullName>
        <description>Total Product Price (#)</description>
        <label>Total Product Price (Actual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>